--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,8 @@
-FROM python:3.10-slim
+FROM python:3.11-slim
 
 WORKDIR /app
-
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 COPY . .
-
-# Expose Flask port
-EXPOSE 5000
-
-# Start Flask
-CMD ["python", "app.py"]
+CMD ["gunicorn", "app:app"]
